fix selection on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -11,3 +11,17 @@
       url("./assets/fonts/russo-one-v14-cyrillic_latin-regular.woff")
       format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+
+  /* @see https://stackoverflow.com/questions/826782/how-to-disable-text-selection-highlighting */
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
